--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -582,7 +582,7 @@ button.card {
 }
 .modal-content button {
     margin: 0;
-    margin-top: 4px;
+    /*margin-top: 4px;*/
     max-width:100%;
     width: 100%;
 }
