--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -675,7 +675,7 @@ th, td {
     max-width: 300px; /* Set maximum width for cells */
     white-space: normal; /* Allow text wrapping */
     word-wrap: break-word; /* Break long words if needed */
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 th {
     background-color: var(--color-gray);
@@ -684,6 +684,7 @@ th {
     text-wrap: nowrap;
     top: 0;
     z-index: 1;
+    overflow: hidden;
 }
 td::after, td.empty-message::after {
     position: absolute;
@@ -889,7 +890,26 @@ tr.dragging, tr.selected, tfoot tr.draggable {
 }
 
 
-
+/* Selection Action Bubble */
+.selection-action-bubble {
+    position: absolute;
+    left: -8px;
+    transform: translateX(-100%) translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    z-index: 100;
+    pointer-events: auto;
+}
+.selection-action-bubble :first-child:not(:last-child) {
+    border-radius: var(--radius-md) var(--radius-md) 0 0;
+}
+.selection-action-bubble :not(:first-child):not(:last-child) {
+    border-radius: 0;
+}
+.selection-action-bubble :last-child:not(:first-child) {
+    border-radius: 0 0 var(--radius-md) var(--radius-md);
+}
 
 
 tr.selected > td::after {
@@ -1064,7 +1084,7 @@ tr.in-group:not(:has(+ .in-group)) > td:not(.row-drag-handle) {
     opacity: 0.5;
 }
 
-.dirty > .table-cell-container > .table-edit-textarea, .dirty input[type="number"] {
+.mark-dirty .dirty > .table-cell-container > .table-edit-textarea, .mark-dirty .dirty input[type="number"] {
     background-color: var(--color-red-bg-transparent);
     outline: 2px solid var(--color-red-bg-transparent);
 }
@@ -1072,7 +1092,7 @@ tr.in-group:not(:has(+ .in-group)) > td:not(.row-drag-handle) {
 tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .table-cell-container > input[type="number"] {
     background-color: var(--color-blue-bg-transparent);
 }
-.dirty > .table-cell-container > .table-edit-textarea:focus, .dirty > .table-cell-container > input[type="number"]:focus {
+.mark-dirty .dirty > .table-cell-container > .table-edit-textarea:focus, .mark-dirty .dirty > .table-cell-container > input[type="number"]:focus {
     outline: solid 2px var(--color-red-bg);
 }
 .table-edit-textarea:focus, td input[type="number"]:focus {
@@ -1250,7 +1270,7 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
 .packlist-table td:not(.row-drag-handle) {
     vertical-align: top;
 }
-.packlist-crates>tbody>tr>td {
+.packlist-crates > tbody > tr > td {
     border-bottom: 3px double var(--color-border);
 }
 .packlist-crates:not(.editing) table tr:first-child td {
