--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -700,6 +700,7 @@ td::after, td.empty-message::after {
     z-index: 2;
     pointer-events: none;
     color: var(--color-text-inverted);
+    background: transparent;
     text-shadow: 0 0 8px var(--color-shadow);
     opacity: .7;
 }
@@ -974,30 +975,21 @@ button.analyzing::after {
 /* Table Group Styling */
 tr.is-group:has(+ .in-group) {
     border-bottom: 1px solid var(--color-text);
-    /*border-top: 1px solid var(--color-gray);*/
-    /*border-left: 2px solid var(--color-gray);*/
 }
 tr.in-group {
     background-color: var(--color-gray-bg);
     box-shadow: inset 0 12px 12px -12px var(--color-shadow);
-    /*border-left: 2px double var(--color-gray);*/
     transform: translateX(2px);
 }
 tr.in-group + tr.in-group {
     border-top: none;
     box-shadow: none;
 }
-tr.in-group > td.row-drag-handle {
-    /*background-color: var(--color-gray-bg);*/
-    /*border-color: var(--color-gray);*/
-    /*border-left: 8px solid var(--background-color);*/
-}
 tr.in-group > td:not(.row-drag-handle) {
-    border: none; /*1px solid var(--color-gray);*/
+    border: none;
 }
 tr.in-group:not(:has(+ .in-group)) > td:not(.row-drag-handle) {
     box-shadow: inset 0 -12px 12px -12px var(--color-shadow);
-    /*border-bottom: 4px double var(--color-border);*/
 }
 
 /* Group Toggle Button */
