--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -97,7 +97,7 @@ select {
     font-size: 1rem;
     color: unset;
     outline: none;
-    border: 1px solid var(--color-text);
+    border: 1px solid var(--color-gray);
     border-radius: var(--radius-md);
     background-color: var(--background-color);
     padding: .5rem;
@@ -107,10 +107,14 @@ select {
 input,
 textarea,
 select {
-    min-width: 100px;
+    width: 120px;
+    flex: 0 1 auto;
 }
 input[type="number"] {
     min-width: 30px;
+}
+input[type="text"] {
+    min-width: 200px;
 }
 textarea {
     resize: vertical;
@@ -130,7 +134,7 @@ button {
     min-width: 100px;
     height: 38px;*/
     width: 120px;
-    flex-grow: 2;
+    flex-grow: 0;
     flex-shrink: 1;
 
     padding: 0.375rem 0.75rem;
